# rmtg

./: .gitignore  Cargo.toml  Justfile  LICENSE-MIT  build.rs  build.vdf  testdata
.github/workflows/: Info.plist  build.yml  lint.yml  release.yml  wasm.yml
assets/: back.mip
importer/: Cargo.toml
importer/src/: card.rs  deck.rs  id.rs  image.rs  image_bench.rs  lib.rs  scryfall.rs  scryfall_tests.rs
net/: Cargo.toml
net/src/: ip.rs  lib.rs  steam.rs
rmtg/: Cargo.toml
rmtg/src/: app.rs  assets.rs  camera.rs  card_spot.rs  deck.rs  events.rs  lib.rs  main.rs  mat.rs  net.rs  paste.rs  physics.rs  shapes.rs  startup.rs
rmtg/src/events/: move_up.rs
rmtg/src/shapes/: cube.rs  dodecahedron.rs  icosahedron.rs  octahedron.rs  tetrahedron.rs
rmtg/src_old/: main.rs  shapes.rs  sync.rs  update.rs
rules/: Cargo.toml  get_rules.sh
rules/src/: lib.rs
src/: app.rs  assets.rs  audio.rs  camera.rs  counters.rs  download.rs  events.rs  focus.rs  keybinds.rs  lib.rs  main.rs  misc.rs  net.rs  setup.rs  shapes.rs  startup.rs  sync.rs  update.rs
src/shapes/: cube.rs  dodecahedron.rs  icosahedron.rs  octahedron.rs  tetrahedron.rs
src_old/: events.rs  lib.rs  misc.rs  update.rs
steam/: rich.txt
www/: assets  index.html  start.sh
