[package]
name = "rmtg"
version = "0.1.0"
edition = "2024"
description = "a magic the gathering card game player"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/rmtg"
build = "build.rs"

[profile.release]
lto = true
strip = true
panic = "abort"
split-debuginfo = "packed"
incremental=true
codegen-units=1
opt-level = 3

[profile.dev]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default=["bin", "steam", "ip", "calc", "mic"]
bin=["dep:arboard", "tokio/rt-multi-thread"]
mic=["dep:bevy_microphone", "dep:rodio"]
calc=["dep:kalc-lib"]
wasm=["bevy_rand/wasm_js", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:console_error_panic_hook", "dep:js-sys"]
steam=["bevy_tangled/steam"]
ip=["bevy_tangled/tangled"]

[dependencies]
bevy={version="0.18.0", default-features = false, features = [
  "std",
  "zstd_rust",
  "android-game-activity",
  "android_shared_stdcxx",
  "bevy_gilrs",
  "bevy_winit",
  "multi_threaded",
  "webgl2",
  "x11",
  "wayland",
  "sysinfo_plugin",
  "default_platform",
  "3d_bevy_render",
  "ui",
  "scene",
  "picking",
  "ui_api",
  "ui_bevy_render",
]}
enumset = "1.1.10"
enum-map = "2.7.3"
itertools="0.14.0"
arboard={version="3.6.1", features = ["wayland-data-control"], optional = true}
reqwest={version= "0.13.1", features = ["rustls"], default-features = false}
json="0.12.4"
image="0.25.9"
futures="0.3.31"
bevy_framepace = {version="0.21.0", git="https://github.com/aevyrie/bevy_framepace"}
tokio={version="1.49.0",default-features = false,features=["rt","macros"]}
rand = "0.9.2"
bevy_rand = {version = "0.13.0", features = ["rand_chacha", "wyrand"] }
bevy_prng = { version = "0.13.0", features = ["rand_chacha", "wyrand"] }
wasm-bindgen = {version="0.2.108", optional = true}
wasm-bindgen-futures = {version="0.4.58", optional = true}
web-sys = { version = "0.3.85", optional = true, features = ["Clipboard", "Navigator", "Window", "HtmlImageElement", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "ImageData"] }
js-sys = {version="0.3.85",optional = true}
console_error_panic_hook = { version = "0.1.7", optional = true }
avian3d={version="0.5.0", features = ["simd"]}
bevy_rich_text3d = "0.6.0"
bevy_tangled = {git = "https://github.com/bgkillas/bevy_tangled", default-features = false, features = ["bevy", "compress"]}
bitcode = {git="https://github.com/SoftbearStudios/bitcode", version = "0.6.7", branch = "large_c_style_enums"}
bevy_ui_text_input = {git="https://github.com/Elekrisk/bevy_ui_text_input", version = "0.7.0", branch = "bevy-0.18"}
#bevy_console = "0.14.1"
#rune = "0.14.1"
bevy_mod_mipmap_generator={git="https://github.com/DGriffin91/bevy_mod_mipmap_generator"}
lz4_flex = { version = "0.12.0", default-features = false }
kalc-lib = {git="https://github.com/bgkillas/kalc-lib",version = "1.5.1", default-features = false, features = ["bitcode"], optional = true}
rules = {path = "rules"}
uuid = "1.20.0"
bevy_microphone={git="https://github.com/bgkillas/bevy_microphone", optional = true}
rodio = {version="0.21.1",optional=true}

[target.'cfg(windows)'.dependencies]
winapi={version="0.3.9",features = ["wincon"]}

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
