[package]
name = "rmtg"
version = "0.1.0"
edition = "2024"
description = "a magic the gathering card game player"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/rmtg"

[profile.release_lto]
inherits = "release"
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[lib]
crate-type = ["cdylib", "rlib"]
name = "rmtg_lib"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["bin", "calc", "mic", "fps"]
bin = ["dep:arboard"]
mic = ["dep:bevy_microphone", "dep:rodio"]
calc = ["dep:ucalc_lib"]
debug = ["bevy/debug"]
colliders = ["avian3d/debug-plugin"]
fps = ["bevy/bevy_dev_tools"]
tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = {version = "0.19.0", default-features = false, features = [
  "3d",
  "ui",
  "bevy_settings",
]}
enumset = "1.1.13"
enum-map = "2.7.3"
arboard = {version = "3.6.1", features = ["wayland-data-control"], default-features = false, optional = true}
reqwest = {version = "0.13.4", features = ["rustls"], default-features = false}
json = "0.12.4"
image = {version = "0.25.10", default-features = false, features = ["jpeg"]}
avian3d = {version = "0.7.0", features = ["simd", "parallel", "f32", "collider-from-mesh", "3d", "parry-f32"], default-features = false}
bevy_rich_text3d = {version = "0.7.0", git = "https://github.com/mintlu8/bevy_rich_text3d", default-features = false, features = ["2d"]}
bevy_p2p = {git = "https://github.com/bgkillas/bevy_p2p"}
rand = { version = "0.10.2", default-features = false, features = ["std", "alloc", "simd_support", "sys_rng"] }
bevy_mod_mipmap_generator = {git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator", default-features = false}
ucalc_lib = {git = "https://github.com/bgkillas/ucalc", optional = true}
rules = {path = "rules"}
uuid = "1.23.5"
bevy_microphone = {git = "https://github.com/bgkillas/bevy_microphone", optional = true}
rodio = {version = "0.22.2",default-features = false, optional = true}
rustc-hash = "2.1.3"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9",features = ["wincon"]}

[lints.clippy]
pedantic = {level = "warn", priority = -1}
shadow_reuse = "warn"
unused_trait_names = "warn"
missing_inline_in_public_items = "warn"
str-to-string = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
missing_fields_in_debug = "allow"
missing_safety_doc = "allow"
similar-names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing-inline-in-public-items = "allow"
needless_pass_by_value = "allow"

cast_precision_loss = "allow"
as_conversions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
