[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bgkillas/rmtg"

[profile.release_lto]
inherits = "release"
lto = true
strip = true
panic = "abort"
codegen-units = 1
opt-level = 3

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 1

[workspace]
resolver = "3"
members = ["rmtg", "rules", "importer"]

[workspace.dependencies]
rules = {path = "rules"}
importer = {path = "importer"}

[workspace.lints.clippy]
pedantic = {level = "warn", priority = -1}
shadow_reuse = "warn"
unused_trait_names = "warn"
missing_inline_in_public_items = "warn"
str-to-string = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
missing_fields_in_debug = "allow"
missing_safety_doc = "allow"
similar-names = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing-inline-in-public-items = "allow"
needless_pass_by_value = "allow"

cast_precision_loss = "allow"
as_conversions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
