[package]
name = "importer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = {version = "0.13.4", features = ["rustls"], default-features = false}
uuid = "1.24.0"
image = {version = "0.25.10", default-features = false, features = ["jpeg"]}
bevy_mod_mipmap_generator = {git = "https://github.com/DGriffin91/bevy_mod_mipmap_generator", default-features = false}
json = "0.12.4"

[lints]
workspace = true
