[package]
name = "importer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = {version = "0.13.4", features = ["rustls"], default-features = false}
uuid = "1.24.0"
image = {version = "0.25.10", default-features = false, features = ["jpeg", "png"]}
jzon = "0.12.5"
rand = { version = "0.10.2", default-features = false, features = ["std", "alloc", "simd_support", "sys_rng"] }
bitcode = {git = "https://github.com/SoftbearStudios/bitcode", branch = "custom_encoder"}
bevy = {version="0.19.0", features = ["ui"], default-features = false}
rules = {workspace = true}
enumset = "1.1.14"
itertools = "0.15.0"
tokio = {version = "1.53.1", features = ["macros", "rt-multi-thread"]}
fast_image_resize = {version = "6.1.0", features = ["image"]}
stream_throttle = "0.5.1"

[lints]
workspace = true
