[package]
name = "rmtg"
version = "0.1.0"
description = "a magic the gathering card game player"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "rmtg_lib"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["bin", "mic", "fps"]
bin = ["dep:arboard"]
mic = ["dep:bevy_microphone", "dep:rodio"]
debug = ["bevy/debug"]
colliders = ["avian3d/debug-plugin"]
fps = ["bevy/bevy_dev_tools"]
tracy = ["bevy/trace_tracy"]

[dependencies]
bevy = {version = "0.19.0", default-features = false, features = [
  "3d",
  "ui",
  "bevy_settings",
  "webgpu",
]}
enumset = "1.1.14"
enum-map = "3.1.0"
arboard = {version = "3.6.1", features = ["wayland-data-control"], default-features = false, optional = true}
avian3d = {version = "0.7.0", features = ["simd", "parallel", "f32", "collider-from-mesh", "3d", "parry-f32"], default-features = false}
bevy_rich_text3d = {version = "0.7.0", git = "https://github.com/mintlu8/bevy_rich_text3d", default-features = false, features = ["2d"]}
bevy_p2p = {git = "https://github.com/bgkillas/bevy_p2p"}
rand = { version = "0.10.2", default-features = false, features = ["std", "alloc", "simd_support", "sys_rng", "std_rng"] }
ucalc_lib = {git = "https://github.com/bgkillas/ucalc"}
importer = {workspace = true}
bevy_microphone = {git = "https://github.com/bgkillas/bevy_microphone", optional = true}
rodio = {version = "0.22.2",default-features = false, optional = true}
rustc-hash = "2.1.3"
bevy_polyline = {git = "https://github.com/bgkillas/bevy_polyline", branch = "bevy-0.19"}
fdlimit = "0.3.0"
itertools = "0.15.0"
bitcode = {git = "https://github.com/SoftbearStudios/bitcode", branch = "custom_encoder"}

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9",features = ["wincon"]}

[lints]
workspace = true
